--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Ramon Prat"
-  avatar           : 
+  avatar           : "ramon_prat.jpeg"
   bio              : "Quantitative Finance | Risk Management"
   location         : "Calaf - SPAIN"
   email            :
