--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Financial Markets Analysis and Learnings"
 title_separator          : "-"
 name                     : "Ramon Prat - Madimon"
 description              : "My blog"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://rpc01.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "rpc01/rpc01.github.io"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
